infrastructure/k8s/posts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-port-service
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 80
      targetPort: 80
