infrastructure/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: "posts.com"
      http:
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-service
                port:
                  number: 80
          - path: /posts
            pathType: Exact
            backend:
              service:
                name: query-service
                port:
                  number: 80
          - path: /posts/?(.*)/comments
            pathType: Prefix
            backend:
              service:
                name: comments-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 3000
